--- a/USSoloForms29/Components/SWFRegistrationDisplay.wo/SWFRegistrationDisplay.html
+++ b/USSoloForms29/Components/SWFRegistrationDisplay.wo/SWFRegistrationDisplay.html
@@ -1,24 +1,54 @@
-<WEBOBJECT NAME=Conditional3><TABLE BORDER=1 WIDTH="100%"><TR><TD>Form eru ekki birt &iacute; kerfinu</TD></TR></TABLE></WEBOBJECT><WEBOBJECT NAME=Conditional2><WEBOBJECT NAME=Conditional1><WEBOBJECT NAME=Form1><TABLE CELLPADDING=2 BORDER=0 CELLSPACING=0><TR><TD><B>Search</B></TD><TD>&nbsp;</TD></TR><WEBOBJECT NAME=Repetition4><TR><TD ALIGN=RIGHT><WEBOBJECT NAME=String6></WEBOBJECT></TD><TD><WEBOBJECT NAME=TextField1></WEBOBJECT></TD></TR></WEBOBJECT><TR><TD>&nbsp;</TD><TD ALIGN=RIGHT><WEBOBJECT NAME=SubmitButton1></WEBOBJECT></TD></TR></TABLE></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional5>
-		<TABLE CELLSPACING=0 CLASS=genericTable CELLPADDING=2 BORDER=1>
-			<TR>
-				<TH>&nbsp;</TH>
-				<TH>Date</TH>
-				<TH>Number</TH>
-				<WEBOBJECT NAME=Repetition3>
-					<TH><WEBOBJECT NAME=String3></WEBOBJECT></TH>
-				</WEBOBJECT>
-				
-			</TR>
-			<WEBOBJECT NAME=Repetition2>
-				<TR>
-					<TD><WEBOBJECT NAME=String4></WEBOBJECT></TD>
-					<TD><WEBOBJECT NAME=String2></WEBOBJECT></TD>
-					<TD><WEBOBJECT NAME=String5></WEBOBJECT></TD>
-					<WEBOBJECT NAME=Repetition1>
-						<TD><WEBOBJECT NAME=Conditional6><WEBOBJECT NAME=String1></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional7><WEBOBJECT NAME=KeyValueConditional1>X</WEBOBJECT><WEBOBJECT NAME=KeyValueConditional2>X</WEBOBJECT></WEBOBJECT></TD>
-					</WEBOBJECT>
-					
-				</TR>
-			</WEBOBJECT>
-		</TABLE>
-	</WEBOBJECT></WEBOBJECT>
+<webobject name="Conditional3">
+	<p>Form eru ekki birt í kerfinu</p>
+</webobject>
+
+<webobject name="Conditional2">
+	<webobject name="Conditional1">
+		<webobject name="Form1">
+			<table cellpadding="0" cellspacing = "0">
+				<tr>
+					<td><b>Search</b></td>
+					<td>&nbsp;</td>
+				</tr>
+				<webobject name = "Repetition4">
+					<tr>
+						<td align = "RIGHT"><webobject name = "String6" /></td>
+						<td><webobject name = "TextField1" /></td>
+					</tr>
+				</webobject>
+				<tr>
+					<td>&nbsp;</td>
+					<td align="RIGHT"><webobject name="SubmitButton1" /></td>
+				</tr>
+			</table>
+		</webobject>
+	</webobject>
+	<webobject name="Conditional5">
+		<table cellspacing="0" cellpadding="0">
+			<tr>
+				<th>&nbsp;</th>
+				<th>Date</th>
+				<th>Number</th>
+				<webobject name="Repetition3">
+					<th><webobject name="String3" /></th>
+				</webobject>
+			</tr>
+			<webobject name="Repetition2">
+				<tr>
+					<td><webobject name="String4" /></td>
+					<td><webobject name="String2" /></td>
+					<td><webobject name="String5" /></td>
+					<webobject name="Repetition1">
+						<td>
+							<webobject name="Conditional6"><webobject name = "String1" /></webobject>
+							<webobject name="Conditional7">
+								<webobject name="KeyValueConditional1">X</webobject>
+								<webobject name="KeyValueConditional2">X</webobject>
+							</webobject>
+						</td>
+					</webobject>
+				</tr>
+			</webobject>
+		</table>
+	</webobject>
+</webobject>
