--- a/trunk/USSoloForms29/Components/SWFConditionalAccess.wo/SWFConditionalAccess.html
+++ b/trunk/USSoloForms29/Components/SWFConditionalAccess.wo/SWFConditionalAccess.html
@@ -1,1 +1,22 @@
-<p><WEBOBJECT NAME=SubmitButton1></WEBOBJECT></p><WEBOBJECT NAME=Conditional1><TABLE CLASS=genericTable CELLSPACING=0 CELLPADDING=2 BORDER=0><TR><TH>User/group</TH><TH>Field</TH><TH>Contains</TH><TH>&nbsp;</TH></TR><WEBOBJECT NAME=Repetition1><TR><TD><WEBOBJECT NAME=PopUpButton1></WEBOBJECT></TD><TD><WEBOBJECT NAME=PopUpButton2></WEBOBJECT></TD><TD><WEBOBJECT NAME=TextField1></WEBOBJECT></TD><TD><WEBOBJECT NAME=SubmitButton3></WEBOBJECT></TD></TR></WEBOBJECT><TR><TD ALIGN=RIGHT COLSPAN=4><WEBOBJECT NAME=SubmitButton2></WEBOBJECT></TD></TR></TABLE></WEBOBJECT>
+<p><webobject name = "SubmitButton1" /></p>
+<webobject name = "Conditional1">
+  <table class = "genericTable" cellspacing = "0" cellpadding = "2" border = "0">
+    <tr>
+      <th>User/group</th>
+      <th>Field</th>
+      <th>Contains</th>
+      <th>&nbsp;</th>
+    </tr>
+    <webobject name = "Repetition1">
+      <tr>
+        <td><webobject name = "PopUpButton1" /></td>
+        <td><webobject name = "PopUpButton2" /></td>
+        <td><webobject name = "TextField1" /></td>
+        <td><webobject name = "SubmitButton3" /></td>
+      </tr>
+    </webobject>
+    <tr>
+      <td align = "RIGHT" colspan = "4"><webobject name = "SubmitButton2" /></td>
+    </tr>
+  </table>
+</webobject>
