--- a/trunk/USSoloForms29/Components/SWFEditField.wo/SWFEditField.html
+++ b/trunk/USSoloForms29/Components/SWFEditField.wo/SWFEditField.html
@@ -1,1 +1,129 @@
-<WEBOBJECT NAME=SWAdminComponentWrapper1><p><B>Properties</B></p><WEBOBJECT NAME=Form1><WEBOBJECT NAME=Conditional1><TABLE CELLSPACING=0 BORDER=1 CELLPADDING=2><TR><TD ALIGN=RIGHT>Default value:</TD><TD><WEBOBJECT NAME=TextField1></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT>Size:</TD><TD><WEBOBJECT NAME=TextField2></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Text above field:</TD><TD><WEBOBJECT NAME=Text3></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Explanatory text:</TD><TD><WEBOBJECT NAME=Text7></WEBOBJECT></TD></TR></TABLE></WEBOBJECT><WEBOBJECT NAME=Conditional2><TABLE CELLSPACING=0 BORDER=1 CELLPADDING=2><TR><TD ALIGN=RIGHT>Default value:</TD><TD><WEBOBJECT NAME=TextField4></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT>Columns:</TD><TD><WEBOBJECT NAME=TextField3></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT>Rows:</TD><TD><WEBOBJECT NAME=TextField6></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Text above field:</TD><TD><WEBOBJECT NAME=Text4></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Explanatory text:</TD><TD><WEBOBJECT NAME=Text8></WEBOBJECT></TD></TR></TABLE></WEBOBJECT><WEBOBJECT NAME=Conditional3><TABLE CELLSPACING=0 BORDER=1 CELLPADDING=2><TR><TD ALIGN=RIGHT>Checked:</TD><TD><WEBOBJECT NAME=SWFCheckbox1></WEBOBJECT></TD></TR></TABLE></WEBOBJECT><WEBOBJECT NAME=Conditional6><TABLE CELLSPACING=0 BORDER=1 CELLPADDING=2><TR><TD ALIGN=RIGHT VALIGN=TOP>Default value:</TD><TD><WEBOBJECT NAME=Text14></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Values:</TD><TD><WEBOBJECT NAME=Text13></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Text above field:</TD><TD><WEBOBJECT NAME=Text12></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Explanatory text:</TD><TD><WEBOBJECT NAME=Text11></WEBOBJECT></TD></TR></TABLE></WEBOBJECT><WEBOBJECT NAME=Conditional4><TABLE CELLSPACING=0 BORDER=1 CELLPADDING=2><TR><TD ALIGN=RIGHT>Default value:</TD><TD><WEBOBJECT NAME=TextField7></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Values:</TD><TD><WEBOBJECT NAME=Text1></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Text above field:</TD><TD><WEBOBJECT NAME=Text5></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Explanatory text:</TD><TD><WEBOBJECT NAME=Text9></WEBOBJECT></TD></TR></TABLE></WEBOBJECT><WEBOBJECT NAME=Conditional5><TABLE CELLSPACING=0 BORDER=1 CELLPADDING=2><TR><TD ALIGN=RIGHT>No selection string:</TD><TD><WEBOBJECT NAME=TextField8></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT>Default value:</TD><TD><WEBOBJECT NAME=TextField9></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Values:</TD><TD><WEBOBJECT NAME=Text2></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Text above field:</TD><TD><WEBOBJECT NAME=Text6></WEBOBJECT></TD></TR><TR><TD ALIGN=RIGHT VALIGN=TOP>Explanatory text:</TD><TD><WEBOBJECT NAME=Text10></WEBOBJECT></TD></TR></TABLE></WEBOBJECT><BR><WEBOBJECT NAME=SubmitButton1></WEBOBJECT></WEBOBJECT><P><B>Access privileges</B></P><WEBOBJECT NAME=Form2><WEBOBJECT NAME=SWAssignPrivileges21></WEBOBJECT></WEBOBJECT></WEBOBJECT>
+<webobject name = "SWAdminComponentWrapper1">
+  <p>
+    <b>Properties</b>
+  </p>
+  <webobject name = "Form1">
+    <webobject name = "Conditional1">
+      <table cellspacing = "0" border = "1" cellpadding = "2">
+        <tr>
+          <td align = "RIGHT">Default value:</td>
+          <td><webobject name = "TextField1" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT">Size:</td>
+          <td><webobject name = "TextField2" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Text above field:</td>
+          <td><webobject name = "Text3" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Explanatory text:</td>
+          <td><webobject name = "Text7" /></td>
+        </tr>
+      </table>
+    </webobject>
+    <webobject name = "Conditional2">
+      <table cellspacing = "0" border = "1" cellpadding = "2">
+        <tr>
+          <td align = "RIGHT">Default value:</td>
+          <td><webobject name = "TextField4" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT">Columns:</td>
+          <td><webobject name = "TextField3" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT">Rows:</td>
+          <td><webobject name = "TextField6" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Text above field:</td>
+          <td><webobject name = "Text4" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Explanatory text:</td>
+          <td><webobject name = "Text8" /></td>
+        </tr>
+      </table>
+    </webobject>
+    <webobject name = "Conditional3">
+      <table cellspacing = "0" border = "1" cellpadding = "2">
+        <tr>
+          <td align = "RIGHT">Checked:</td>
+          <td><webobject name = "SWFCheckbox1" /></td>
+        </tr>
+      </table>
+    </webobject>
+    <webobject name = "Conditional6">
+      <table cellspacing = "0" border = "1" cellpadding = "2">
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Default value:</td>
+          <td><webobject name = "Text14" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Values:</td>
+          <td><webobject name = "Text13" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Text above field:</td>
+          <td><webobject name = "Text12" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Explanatory text:</td>
+          <td><webobject name = "Text11" /></td>
+        </tr>
+      </table>
+    </webobject>
+    <webobject name = "Conditional4">
+      <table cellspacing = "0" border = "1" cellpadding = "2">
+        <tr>
+          <td align = "RIGHT">Default value:</td>
+          <td><webobject name = "TextField7" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Values:</td>
+          <td><webobject name = "Text1" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Text above field:</td>
+          <td><webobject name = "Text5" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Explanatory text:</td>
+          <td><webobject name = "Text9" /></td>
+        </tr>
+      </table>
+    </webobject>
+    <webobject name = "Conditional5">
+      <table cellspacing = "0" border = "1" cellpadding = "2">
+        <tr>
+          <td align = "RIGHT">No selection string:</td>
+          <td><webobject name = "TextField8" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT">Default value:</td>
+          <td><webobject name = "TextField9" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Values:</td>
+          <td><webobject name = "Text2" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Text above field:</td>
+          <td><webobject name = "Text6" /></td>
+        </tr>
+        <tr>
+          <td align = "RIGHT" valign = "TOP">Explanatory text:</td>
+          <td><webobject name = "Text10" /></td>
+        </tr>
+      </table>
+    </webobject>
+    <br />
+    <webobject name = "SubmitButton1" />
+  </webobject>
+  <p>
+    <b>Access privileges</b>
+  </p>
+  <webobject name = "Form2"><webobject name = "SWAssignPrivileges21" /></webobject>
+</webobject>
