--- a/trunk/USSoloForms29/Components/SWFEditFieldSets.wo/SWFEditFieldSets.html
+++ b/trunk/USSoloForms29/Components/SWFEditFieldSets.wo/SWFEditFieldSets.html
@@ -1,1 +1,37 @@
-<p><WEBOBJECT NAME=SubmitButton1></WEBOBJECT></p><WEBOBJECT NAME=Conditional1><BR><TABLE BORDER=1 CELLPADDING=2 CELLSPACING=0 CLASS=genericTable WIDTH="100%"><TR><TH>Field sets</TH><TH>&nbsp;</TH><TH>&nbsp;</TH></TR><WEBOBJECT NAME=Repetition2><TR><TD VALIGN=TOP ROWSPAN=2>Fieldset name: <WEBOBJECT NAME=TextField2></WEBOBJECT><WEBOBJECT NAME=SWFEditFields1></WEBOBJECT></TD><TD><WEBOBJECT NAME=Conditional2><WEBOBJECT NAME=ImageButton1></WEBOBJECT></WEBOBJECT></TD><TD ROWSPAN=2><WEBOBJECT NAME=SubmitButton2></WEBOBJECT></TD></TR><TR><TD><WEBOBJECT NAME=Conditional3><WEBOBJECT NAME=ImageButton4></WEBOBJECT></WEBOBJECT></TD></TR></WEBOBJECT></TABLE><WEBOBJECT NAME=Conditional5><BR><B>Fields not in field sets</B><BR><BR><WEBOBJECT NAME=SWFEditFields3></WEBOBJECT></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional4><WEBOBJECT NAME=SWFEditFields2></WEBOBJECT></WEBOBJECT><P ALIGN=RIGHT><WEBOBJECT NAME=SubmitButton3></WEBOBJECT></P>
+<p><webobject name = "SubmitButton1" /></p>
+<webobject name = "Conditional1">
+  <br />
+  <table border = "1" cellpadding = "2" cellspacing = "0" class = "genericTable" width = "100%">
+    <tr>
+      <th>Field sets</th>
+      <th>&nbsp;</th>
+      <th>&nbsp;</th>
+    </tr>
+    <webobject name = "Repetition2">
+      <tr>
+        <td valign = "TOP" rowspan = "2">Fieldset name: 
+          <webobject name = "TextField2" />
+          <webobject name = "SWFEditFields1" />
+        </td>
+        <td>
+          <webobject name = "Conditional2"><webobject name = "ImageButton1" /></webobject>
+        </td>
+        <td rowspan = "2"><webobject name = "SubmitButton2" /></td>
+      </tr>
+      <tr>
+        <td>
+          <webobject name = "Conditional3"><webobject name = "ImageButton4" /></webobject>
+        </td>
+      </tr>
+    </webobject>
+  </table>
+  <webobject name = "Conditional5">
+    <br />
+    <b>Fields not in field sets</b>
+    <br />
+    <br />
+    <webobject name = "SWFEditFields3" />
+  </webobject>
+</webobject>
+<webobject name = "Conditional4"><webobject name = "SWFEditFields2" /></webobject>
+<p align = "RIGHT"><webobject name = "SubmitButton3" /></p>
