VEF-548 : Small fixes to simple form display template

--- a/USSoloForms29/Components/SWFOldFormDisplay.wo/SWFOldFormDisplay.html
+++ b/USSoloForms29/Components/SWFOldFormDisplay.wo/SWFOldFormDisplay.html
@@ -4,7 +4,7 @@
 			<div class="swform">
 				<font color="#ff0000"><b><webobject name="ERROR_STRING" /></b></font>
 				<webobject name="FORM">
-					<table cellspacing="0" cellpadding="2" border="0" id="soloformtable">
+					<table cellspacing="0" cellpadding="0" id="soloformtable">
 						<webobject name="FIELD_REPETITION">
 							<tr class="soloformrow">
 								<td align="right" valign="top" class="soloformQ"><webobject name="IS_REQUIRED_CONDITIONAL"><font color="#ff0000">*</font>&nbsp;</webobject><webobject name="FIELD_NAME_STRING" />:</td>
