--- a/trunk/USSoloForms29/Components/SWFEditGeneralSettings.wo/SWFEditGeneralSettings.html
+++ b/trunk/USSoloForms29/Components/SWFEditGeneralSettings.wo/SWFEditGeneralSettings.html
@@ -1,11 +1,11 @@
-<div class="menu">(<webobject name="String2" />)</div>
+<div class="menu">(<webobject name="NAME_STRING" />)</div>
 
 <div id="swobjectEdit">
-	<label>Heiti:</label> <WEBOBJECT NAME="TextField1" /><br />
-	<label>Texti ef nauðsynlegur reitur tómur:</label> <WEBOBJECT NAME="TextField4" /><br />
-	<label>Skilaboð eftir skráningu:</label> <WEBOBJECT NAME="TextField3" /><br />
+	<label>Heiti:</label> <WEBOBJECT NAME="NAME_FIELD" /><br />
+	<label>Texti ef nauðsynlegur reitur tómur:</label> <WEBOBJECT NAME="REQUIRED_FIELD_EMPTY_TEXT" /><br />
+	<label>Skilaboð eftir skráningu:</label> <WEBOBJECT NAME="AFTER_REGISTRATION" /><br />
 	<label>Hámarksfjöldi skráninga:</label> <WEBOBJECT NAME="MAX_REGISTRATOIONS_FIELD" /><br />
-	<label>Senda tölvupóst frá:</label> <WEBOBJECT NAME="TextField6" /><br />
-	<label>Senda tölvupóst með skráningu til:</label> <WEBOBJECT NAME="TextField5" /><br />
-	<label>&nbsp;</label><webobject name="SubmitButton1" />
+	<label>Senda tölvupóst frá:</label> <WEBOBJECT NAME="EMAIL_FROM" /><br />
+	<label>Senda tölvupóst með skráningu til:</label> <WEBOBJECT NAME="EMAIL_TO" /><br />
+	<label>&nbsp;</label><webobject name="SUBMIT_BUTTON" />
 </div>
