--- a/trunk/USSoloForms29/Components/SWFFormDisplay.wo/SWFFormDisplay.html
+++ b/trunk/USSoloForms29/Components/SWFFormDisplay.wo/SWFFormDisplay.html
@@ -1,2 +1,7 @@
-<webobject name = "OLD_FORM_COND"><webobject name = "OLD_FORM_DISPLAY" /></webobject>
-<webobject name = "NEW_FORM_COND"><webobject name = "NEW_FORM_DISPLAY" /></webobject>
+<webobject name="HAS_FORM_COND">
+	<webobject name="IS_NOT_IN_FORM_COND">
+		<webobject name="OLD_FORM_COND"><webobject name="OLD_FORM_DISPLAY" /></webobject>
+		<webobject name="NEW_FORM_COND"><webobject name="NEW_FORM_DISPLAY" /></webobject>
+	</webobject>
+	<webobject name="IS_IN_FORM_COND"><p>Form eru ekki birt i viðhaldskerfi.</p></webobject>
+</webobject>
