INV-4 : Made navigation html fit in one line. IE misbehaves when there are spaces between LI-elements in nested lists

--- a/USSoloWeb29/Components/SWNavigation.wo/SWNavigation.html
+++ b/USSoloWeb29/Components/SWNavigation.wo/SWNavigation.html
@@ -1,11 +1,1 @@
-<webobject name="HAS_ELEMENTS_CONDITIONAL">
-	<ul>
-		<webobject name="REPETITION">
-			<li><webobject name="LINK"><webobject name="PAGE_NAME_STRING" /></webobject>
-				<webobject name="SHOW_HIERARCHY">
-					<webobject name="SELECTED_CONDITIONAL"><webobject name="SUB_NAVIGATION" /></webobject>
-				</webobject>
-			</li>
-		</webobject>
-	</ul>
-</webobject>
+<webobject name="HAS_ELEMENTS_CONDITIONAL"><ul><webobject name="REPETITION"><li><webobject name="LINK"><webobject name="PAGE_NAME_STRING" /></webobject><webobject name="SHOW_HIERARCHY"><webobject name="SELECTED_CONDITIONAL"><webobject name="SUB_NAVIGATION" /></webobject></webobject></li></webobject></ul></webobject>
