--- a/trunk/USSoloWeb29/Components/SWSFComponent.wo/SWSFComponent.html
+++ b/trunk/USSoloWeb29/Components/SWSFComponent.wo/SWSFComponent.html
@@ -1,3 +1,3 @@
 <div class="swdocument">
-	<webobject name="LINK"><webobject name="DISPLAY_ICON_CONDITIONAL"><webobject name="ICON" /></webobject> <webobject name="DOC_NAME_STRING" /> <webobject name="DOWNLOAD_TEXT_STRING" /> (<webobject name="SIZE_STRING" /> KiB)</webobject>
+	<webobject name="LINK"><webobject name="DISPLAY_ICON_CONDITIONAL"><webobject name="ICON" /></webobject> <webobject name="DOC_NAME_STRING" /> <webobject name="DOWNLOAD_TEXT_STRING" /> (<webobject name="SIZE_STRING" /> KB)</webobject>
 </div>
