--- a/USSoloWeb29/Components/SWAssetManagement.wo/SWAssetManagement.html
+++ b/USSoloWeb29/Components/SWAssetManagement.wo/SWAssetManagement.html
@@ -5,9 +5,6 @@
 			<webobject name="CREATE_ROOT_FOLDER_CONDITIONAL"><webobject name="CREATE_ROOT_FOLDER_LINK"><webobject name="CREATE_ROOT_FOLDER_STRING" /></webobject></webobject>
 		</div>
 		
-		<webobject name="SEARCH_FORM">
-			<webobject name="SEARCH_FIELD" /><webobject name="SEARCH_BUTTON" />
-		</webobject>
 		<div id="swfilebrowser">
 			<webobject name="FOLDER_LIST" />
 		</div>
@@ -38,16 +35,14 @@
 						<th><webobject name="HEADER_DATE_STRING" /></th>
 						<th><webobject name="HEADER_SIZE_STRING" /></th>
 						<th>&nbsp;</th>
-						<th>&nbsp;</th>
 					</tr>
 					<webobject name="ASSET_REPETITION">
 						<webobject name="TR_ELEMENT">
-							<webobject name="HAS_RECORD_CONDITIONAL"><td><webobject name="LINK_ASSET_HYPERLINK">[V]</webobject></td></webobject>
+							<webobject name="HAS_RECORD_CONDITIONAL"><td><webobject name="LINK_ASSET_HYPERLINK">V</webobject></td></webobject>
 							<td><webobject name="SELECT_ASSET_HYPERLINK"><webobject name="NAME_STRING" /></webobject></td>
 							<td><webobject name="DATE_STRING" /></td>
 							<td><webobject name="SIZE_STRING" /></td>
-							<td><webobject name="TRANSFER_ASSET_LINK">[F]</webobject></td>
-							<td><webobject name="DELETE_ASSET_LINK">[-]</webobject></td>
+							<td><webobject name="TRANSFER_ASSET_LINK">F</webobject>&nbsp;&nbsp;<webobject name="DELETE_ASSET_LINK">-</webobject></td>
 						</webobject>
 					</webobject>
 					<tr>
@@ -55,7 +50,6 @@
 						<td align="RIGHT"><b><webobject name="String14" />:</b></td>
 						<td>&nbsp;</td>
 						<td><b><webobject name="FOLDER_SIZE_STRING" />k</b></td>
-						<td>&nbsp;</td>
 						<td>&nbsp;</td>
 					</tr>
 				</table>
