Simplifying template structure, deleted redundant component templates from editing mode (Ttemplates 1 & 4)

--- a/USSoloWeb29/Components/SWCAText.wo/SWCAText.html
+++ b/USSoloWeb29/Components/SWCAText.wo/SWCAText.html
@@ -1,17 +1,13 @@
-<webobject name="RADIO_1" />
-<webobject name="IMAGE_1" />
+<webobject name="RADIO_LEFT" />
+<webobject name="IMAGE_LEFT" />
 
-<webobject name="RADIO_2" />
-<webobject name="IMAGE_2" />
+<webobject name="RADIO_RIGHT" />
+<webobject name="IMAGE_RIGHT" />
 
-<webobject name="RADIO_3" />
-<webobject name="IMAGE_3" />
-
-<webobject name="RADIO_4" />
-<webobject name="IMAGE_4" />
 <webobject name="SELECT_IMAGE_LINK" />
 
 <webobject name="NAME_FIELD" />
 <webobject name="HTML_EDITOR" />
 
-<webobject name="CheckBox1" /><webobject name="String1" />
+<webobject name="ENCODE_BREAKS_CHECK" /> <webobject name="String1" />
+<webobject name="WIKI_CHECK" /> Wiki
