--- a/trunk/USSoloWeb29/Components/SWEditComponent.wo/SWEditComponent.html
+++ b/trunk/USSoloWeb29/Components/SWEditComponent.wo/SWEditComponent.html
@@ -1,6 +1,6 @@
-<webobject name="WRAPPER">
+<wo:SWAdminComponentWrapper>
 	<div id="swobjectedit">
-		<webobject name="FORM">
+		<wo:form>
 			<webobject name="TAB_PANEL">
 				<webobject name="REPETITION">
 					<webobject name="TAB_PANEL_SELECTION">
@@ -17,6 +17,6 @@
 			</fieldset>
 			
 			<webobject name="SUBMIT_BUTTON" />
-		</webobject>
+		</wo:form>
 	</div>
-</webobject>
+</wo:SWAdminComponentWrapper>
