Added link to Textile reference

--- a/USSoloWeb29/Components/SWCAText.wo/SWCAText.html
+++ b/USSoloWeb29/Components/SWCAText.wo/SWCAText.html
@@ -15,4 +15,4 @@
 </wo:conditional>
 
 <webobject name="ENCODE_BREAKS_CHECK" /> <webobject name="String1" />
-<webobject name="WIKI_CHECK" /> Wiki-texti
+<webobject name="WIKI_CHECK" /> <a href="http://www.us.is/textile-reference/index.html" onclick="window.open(this.href,'textile_reference','height=400,width=600,scrollbars=1');return false;">Wiki-texti</a>
