--- a/USSoloWeb29/Components/SoloNewsNewsList.wo/SoloNewsNewsList.html
+++ b/USSoloWeb29/Components/SoloNewsNewsList.wo/SoloNewsNewsList.html
@@ -14,17 +14,16 @@
 			</webobject>
 			<webobject name="DISPLAY_TEXT_CONDITIONAL">
 				<div class="sw_newsitem_text">
-					<webobject name="DO_NOT_ENCODE_BREAKS_CONDITIONAL"><webobject name="TEXT_WITHOUT_BREAKS_STRING" /></webobject>
-					<webobject name="ENCODE_BREAKS_CONDITIONAL"><webobject name="TEXT_WITH_BREAKS_STRING" /></webobject>
+					<webobject name="TEXT_STRING" />
 				</div>
 			</webobject>
 			<webobject name="DISPLAY_LINK_ONLY_CONDITIONAL">
 				<webobject name="MORE_LINK"><webobject name="SHOW_MORE_LINK_TEXT" /></webobject>
 			</webobject>
 			<webobject name="ALLOW_COMMENTS_CONDITIONAL">
-				<div class = "talkblock">
-					<webobject name = "MORE_LINK">
-						<webobject name = "COMMENT_INFO" />
+				<div class="talkblock">
+					<webobject name="MORE_LINK">
+						<webobject name="COMMENT_INFO" />
 					</webobject>
 				</div>
 			</webobject>
