Added support (and settings) for content compression

--- a/USSoloWeb29/Components/SWSettingsGeneral.wo/SWSettingsGeneral.html
+++ b/USSoloWeb29/Components/SWSettingsGeneral.wo/SWSettingsGeneral.html
@@ -18,6 +18,8 @@
 		<legend>Ýmislegt</legend>
 		<label><webobject name="String8" />: </label><webobject name="TextField14" /><br />
 		<label><webobject name="String10" />: </label><webobject name="TextField1" /><br />
+		<label>Hreinsa HTML á vefsíðum: </label> <wo:checkBox checked="$settings.useTidy" /><br />
+		<label>Þjappa textaefni: </label> <wo:checkBox checked="$settings.useGzip" /><br />
 	</fieldset>
 	
 	<label>&nbsp;</label><webobject name="SubmitButton4" />
