Added checkbox to allow wiki markup in components

--- a/USSoloWeb29/Components/SWEditComponent.wo/SWEditComponent.html
+++ b/USSoloWeb29/Components/SWEditComponent.wo/SWEditComponent.html
@@ -11,6 +11,7 @@
 			<fieldset>
 				<legend>Stillingar birtingar</legend>
 				<label>Númer: </label><webobject name="ID_STRING" /><br />
+				<label>Wiki: </label><webobject name="WIKI_CHECKOX" /><br />
 				<label><webobject name="String2" />: </label><webobject name="PUBLISHED_CHECKOX" /><br />
 				<label><webobject name="String3" />: </label><webobject name="FROM_DATE_FIELD" /><br />
 				<label><webobject name="String4" />: </label><webobject name="TO_DATE_FIELD" /><br />
